--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,50 @@
 version: "3.9"
 
+name: prano-app
+
 services:
+  mongo:
+    image: mongo:7.0.12
+    ports:
+      - "27017:27017"
+    env_file:
+      - .env
+    volumes:
+      - mongo_data:/data/db
+    networks:
+      - prano-app
+    restart: on-failure
+
   web:
     build:
       context: ./site
       dockerfile: Dockerfile
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    ports:
-      - "5173:5173"
+    env_file:
+      - .env
     volumes:
       - ./site:/app
       - /app/node_modules
+    networks:
+      - prano-app
+    #    depends_on:
+    #      - api
     restart: on-failure
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - prano-app
+    depends_on:
+      #      - api
+      - web
+    restart: on-failure
+
+volumes:
+  mongo_data:
+networks:
+  prano-app:
+    driver: bridge
