--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     env_file:
       - .env
     volumes:
-      - mongo_data:/data/db
+      - ./mongo_data:/data/db
     networks:
       - prano-app
     restart: on-failure
@@ -19,8 +19,6 @@ services:
     build:
       context: ./site
       dockerfile: Dockerfile
-    env_file:
-      - .env
     volumes:
       - ./site:/app
       - /app/node_modules
