--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,11 @@ server {
     server_name web_server;
 
     location / {
-        proxy_pass http://web:5173;
+        proxy_pass http://web:80;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 }
