--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -1,4 +1,5 @@
-FROM node:alpine
+# Development stage
+FROM node:alpine AS development
 
 WORKDIR /app
 
@@ -8,4 +9,11 @@ RUN npm ci
 
 COPY . .
 
-CMD ["npm", "run", "dev", "--", "--host"]
+RUN npm run build
+
+# Production stage
+FROM nginx:alpine AS production
+
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+COPY --from=development /app/dist /usr/share/nginx/html
