--- a/site/package.json
+++ b/site/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-hamburgers": "^1.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
