--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 MONGO_INITDB_DATABASE=db
 MONGO_INITDB_ROOT_USERNAME=user
 MONGO_INITDB_ROOT_PASSWORD=user
+
+CERT_EMAIL=mail@mail.com
+DOMAIN=domain.com
