--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,10 @@ name: prano-app
 services:
   mongo:
     image: mongo:7.0.12
-    env_file:
-      - .env
+    environment:
+      - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE}
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     volumes:
       - mongo_data:/data/db
     networks:
@@ -23,16 +25,33 @@ services:
 
   nginx:
     image: nginx:alpine
+    environment:
+      - DOMAIN=${DOMAIN}
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+#      - ./nginx/nginx.conf.template:/etc/nginx/templates/default.conf.template
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     networks:
       - prano-app
     depends_on:
       #      - api
       - web
     restart: unless-stopped
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email ${CERT_EMAIL} -d ${DOMAIN} --agree-tos
+    networks:
+      - prano-app
+    depends_on:
+      - nginx
 
 volumes: # /var/lib/docker
   mongo_data:
