--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -2,6 +2,17 @@ server {
     listen 80;
     server_name _;
 
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    ssl_certificate     /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+    server_name $DOMAIN;
+    root /var/www/html;
+    index index.php index.html index.htm;
+
     location / {
         proxy_pass http://web:80;
         proxy_http_version 1.1;
