--- a/site/nginx.conf
+++ b/site/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
-    server_name production;
     root /usr/share/nginx/html;
+    access_log  off;
 
     location / {
         try_files $uri$args $uri$args/ /index.html;
