--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -9,17 +9,17 @@ server {
     listen 443 ssl;
     ssl_certificate     /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
-    server_name $DOMAIN;
+    server_name ${DOMAIN};
     root /var/www/html;
     index index.php index.html index.htm;
 
     location / {
         proxy_pass http://web:80;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Upgrade ${DOLLAR}http_upgrade;
         proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header Host ${DOLLAR}host;
+        proxy_cache_bypass ${DOLLAR}http_upgrade;
     }
 
     location ~ /.well-known/acme-challenge/ {
