--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -16,10 +16,10 @@ server {
     location / {
         proxy_pass http://web:80;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade ${DOLLAR}http_upgrade;
+        proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
-        proxy_set_header Host ${DOLLAR}host;
-        proxy_cache_bypass ${DOLLAR}http_upgrade;
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 
     location ~ /.well-known/acme-challenge/ {
