--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name ${DOMAIN};
 
     return 301 https://$host$request_uri;
 }
@@ -15,11 +15,7 @@ server {
 
     location / {
         proxy_pass http://web:80;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
     }
 
     location ~ /.well-known/acme-challenge/ {
