--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,14 +1,21 @@
 server {
     listen 80;
-    server_name _;
+    server_name prano.group;
+
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    ssl_certificate     /etc/letsencrypt/live/prano.group//fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/prano.group/privkey.pem;
+    server_name prano.group;
+    root /var/www/html;
+    index index.php index.html index.htm;
 
     location / {
         proxy_pass http://web:80;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
     }
 
     location ~ /.well-known/acme-challenge/ {
