--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -1,8 +1,7 @@
 server {
     listen 80;
-    server_name ${DOMAIN};
 
-    return 301 https://$host$request_uri;
+    return 301 https://${DOMAIN}$request_uri;
 }
 
 server {
