--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -3,6 +3,10 @@ server {
     server_name web_server;
 
     location / {
-        proxy_pass http://web:5173;
+        proxy_pass http://web:5173/;
+    }
+
+    location /api {
+        proxy_pass http://api:3000/;
     }
 }
