--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,12 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://web:80;
+        proxy_pass http://web:80/;
+        proxy_set_header Host $host;
+    }
+
+    location /api {
+        proxy_pass http://api:3000/;
         proxy_set_header Host $host;
     }
 
