--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -13,7 +13,12 @@ server {
     index index.php index.html index.htm;
 
     location / {
-        proxy_pass http://web:80;
+        proxy_pass http://web:80/;
+        proxy_set_header Host $host;
+    }
+
+    location /api {
+        proxy_pass http://api:3000/;
         proxy_set_header Host $host;
     }
 
