--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
-MONGO_INITDB_DATABASE=db
-MONGO_INITDB_ROOT_USERNAME=user
-MONGO_INITDB_ROOT_PASSWORD=user
+MONGO_DB=db
+MONGO_USER=user
+MONGO_PASSWORD=user
+MONGO_CLUSTER="mongo:27017"
 
 CERT_EMAIL=mail@mail.com
 DOMAIN=domain.com
+
+JWT_ACCESS_SECRET="jwt-access-secret"
+JWT_REFRESH_SECRET="jwt-refresh-secret"
+SECRET_SALT=10
