--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,15 @@
-MONGO_DB=db
+MONGO_INITDB_DATABASE=db
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=root
 MONGO_USER=user
 MONGO_PASSWORD=user
-MONGO_CLUSTER="mongo:27017"
+
+DB_URL="mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/${MONGO_INITDB_DATABASE}"
+JWT_ACCESS_SECRET=jwt-access-secret
+JWT_ACCESS_EXPIRES_IN=15m
+JWT_REFRESH_SECRET=jwt-refresh-secret
+JWT_REFRESH_EXPIRES_IN=30d
+SECRET_SALT=10
 
 CERT_EMAIL=mail@mail.com
 DOMAIN=domain.com
-
-JWT_ACCESS_SECRET="jwt-access-secret"
-JWT_REFRESH_SECRET="jwt-refresh-secret"
-SECRET_SALT=10
