--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -6,7 +6,7 @@ server {
         proxy_pass http://web:5173/;
     }
 
-    location /api {
+    location /api/ {
         proxy_pass http://api:3000/;
     }
 }
