--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,9 @@
-MONGO_INITDB_DATABASE=db
-MONGO_INITDB_ROOT_USERNAME=user
-MONGO_INITDB_ROOT_PASSWORD=user
-MONGO_CLUSTER="db:27017"
+DB_URL=mongodb://user:user@localhost:27017/db
 
-CERT_EMAIL=mail@mail.com
-DOMAIN=domain.com
+JWT_ACCESS_SECRET=jwt-access-secret
+JWT_ACCESS_EXPIRES_IN=15m
+
+JWT_REFRESH_SECRET=jwt-refresh-secret
+JWT_REFRESH_EXPIRES_IN=30d
+
+SECRET_SALT=10
