--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,8 +5,12 @@ services:
     image: mongo:7.0.12
     ports:
       - "27017:27017"
-    env_file:
-      - .env
+    environment:
+      - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE}
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+      - MONGO_USER=${MONGO_USER}
+      - MONGO_PASSWORD=${MONGO_PASSWORD}
     volumes:
       - mongo_data:/data/db
     networks:
