--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "main": "app.js",
   "scripts": {
     "build": "npx webpack build",
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "dev": "nodemon ./src/app.js",
+    "start": "node ./src/ app.js"
   },
   "keywords": [],
   "author": "",
