--- a/site/package.json
+++ b/site/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
     "tailwind-hamburgers": "^1.3.5"
   },
   "devDependencies": {
