--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -9,7 +9,7 @@ RUN npm ci
 
 COPY . .
 
-RUN npm run build
+CMD ["npm", "run", "dev"]
 
 # Production stage
 FROM node:alpine AS production
@@ -20,6 +20,6 @@ COPY package*.json ./
 
 RUN npm ci --only=production
 
-COPY --from=development /app/dist ./dist
+COPY . .
 
-CMD ["node", "dist/index.js"]
+CMD ["npm", "start"]
