--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,18 @@ MONGO_USER=user
 MONGO_PASSWORD=user
 
 DB_URL="mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/${MONGO_INITDB_DATABASE}"
+FRONT_URL=http://localhost
 JWT_ACCESS_SECRET=jwt-access-secret
-JWT_ACCESS_EXPIRES_IN=15m
+JWT_ACCESS_EXPIRES_IN=1d
+JWT_ACTIVATE_SECRET=jwt-activate-secret
+JWT_ACTIVATE_EXPIRES_IN=7d
+JWT_FORGOT_SECRET=jwt-forgot-secret
+JWT_FORGOT_EXPIRES_IN=7d
 JWT_REFRESH_SECRET=jwt-refresh-secret
 JWT_REFRESH_EXPIRES_IN=30d
 SECRET_SALT=10
+NO_REPLY_EMAIL="mail@mail.com"
+NO_REPLY_PASSWORD="password"
 
 CERT_EMAIL=mail@mail.com
 DOMAIN=domain.com
