--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,11 +22,18 @@ services:
       target: production
     environment:
       - DB_URL=${DB_URL}
+      - FRONT_URL=${FRONT_URL}
       - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}
       - JWT_ACCESS_EXPIRES_IN=${JWT_ACCESS_EXPIRES_IN}
+      - JWT_ACTIVATE_SECRET=${JWT_ACTIVATE_SECRET}
+      - JWT_ACTIVATE_EXPIRES_IN=${JWT_ACTIVATE_EXPIRES_IN}
+      - JWT_FORGOT_SECRET=${JWT_FORGOT_SECRET}
+      - JWT_FORGOT_EXPIRES_IN=${JWT_FORGOT_EXPIRES_IN}
       - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}
       - JWT_REFRESH_EXPIRES_IN=${JWT_REFRESH_EXPIRES_IN}
       - SECRET_SALT=${SECRET_SALT}
+      - NO_REPLY_EMAIL=${NO_REPLY_EMAIL}
+      - NO_REPLY_PASSWORD${NO_REPLY_PASSWORD}
     volumes:
       - ./server:/app
       - /app/node_modules
