--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,19 @@
 DB_URL=mongodb://user:user@localhost:27017/db
+FRONT_URL=http://localhost
 
 JWT_ACCESS_SECRET=jwt-access-secret
-JWT_ACCESS_EXPIRES_IN=15m
+JWT_ACCESS_EXPIRES_IN=1d
+
+JWT_ACTIVATE_SECRET=jwt-activate-secret
+JWT_ACTIVATE_EXPIRES_IN=7d
+
+JWT_FORGOT_SECRET=jwt-forgot-secret
+JWT_FORGOT_EXPIRES_IN=7d
 
 JWT_REFRESH_SECRET=jwt-refresh-secret
 JWT_REFRESH_EXPIRES_IN=30d
 
 SECRET_SALT=10
+
+NO_REPLY_EMAIL="mail@mail.com"
+NO_REPLY_PASSWORD="password"
