--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "cron": "^3.5.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
