--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -18,6 +18,11 @@ server {
     }
 
     location /api/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Access-Control-Allow-Origin' '*';
@@ -35,7 +40,6 @@ server {
         add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
 
         proxy_pass http://api:3000/;
-        proxy_set_header Host $host;
     }
 
     location ~ /.well-known/acme-challenge/ {
