--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -24,15 +24,16 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
 
         if ($request_method = 'OPTIONS') {
-                return 204;
-            }
+            return 204;
+        }
 
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Allow-Methods' '*';
         add_header 'Access-Control-Allow-Headers' '*';
 
-        proxy_pass http://api:3000/;
+        rewrite /(.*) /$1 break;
+        proxy_pass http://api:3000;
     }
 
     location ~ /.well-known/acme-challenge/ {
