--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    server_name _
 
     return 301 https://${DOMAIN}$request_uri;
 }
@@ -18,12 +19,8 @@ server {
     }
 
     location /api/ {
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
         proxy_pass http://api:3000/;
+        proxy_set_header Host $host;
     }
 
     location ~ /.well-known/acme-challenge/ {
