--- a/site/package.json
+++ b/site/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^2.5.1",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
