--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -14,13 +14,16 @@ server {
     index index.php index.html index.htm;
 
     location / {
-        proxy_pass http://web:80/;
         proxy_set_header Host $host;
+        proxy_pass http://web:80/;
     }
 
     location /api/ {
-        proxy_pass http://api:3000/;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://api:3000/;
     }
 
     location ~ /.well-known/acme-challenge/ {
