--- a/site/package.json
+++ b/site/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
