--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ JWT_REFRESH_EXPIRES_IN=30d
 SECRET_SALT=10
 NO_REPLY_EMAIL="mail@mail.com"
 NO_REPLY_PASSWORD="password"
+CC_API_KEY="key"
 
 CERT_EMAIL=mail@mail.com
 DOMAIN=domain.com
