--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -36,6 +36,7 @@ services:
       - SECRET_SALT=${SECRET_SALT}
       - NO_REPLY_EMAIL=${NO_REPLY_EMAIL}
       - NO_REPLY_PASSWORD=${NO_REPLY_PASSWORD}
+      - CC_API_KEY=${CC_API_KEY}
     volumes:
       - ./server:/app
       - /app/node_modules
