--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ SECRET_SALT=10
 NO_REPLY_EMAIL="mail@mail.com"
 NO_REPLY_PASSWORD="password"
 CC_API_KEY="key"
+MANAGER_EMAIL="mail@mail.com"
 
 CERT_EMAIL=mail@mail.com
 DOMAIN=domain.com
