--- a/site/package.json
+++ b/site/package.json
@@ -21,6 +21,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwind-hamburgers": "^1.3.5"
   },
   "devDependencies": {
