--- a/site/package.json
+++ b/site/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:sitemap": "node generate-sitemap.js"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
@@ -18,12 +19,16 @@
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-slick": "^0.30.3",
+    "sitemap": "^8.0.0",
     "slick-carousel": "^1.8.1",
-    "tailwind-hamburgers": "^1.3.5"
+    "tailwind-hamburgers": "^1.3.5",
+    "terser": "^5.39.0",
+    "vite-plugin-prerender": "^1.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -37,6 +42,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
+    "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
