--- a/telegramBot/package.json
+++ b/telegramBot/package.json
@@ -1,9 +1,9 @@
 {
   "name": "telegrambot",
   "version": "1.0.0",
-  "main": "appBot.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon appBot.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.7",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.9",
+    "pm2": "^6.0.5",
     "redis": "^4.7.0"
   }
 }
