--- a/site/package.json
+++ b/site/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
