--- a/telegramBot/package.json
+++ b/telegramBot/package.json
@@ -10,7 +10,9 @@
   "description": "",
   "dependencies": {
     "axios": "^1.8.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.9",
     "pm2": "^6.0.5",
