--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
-    "multer": "2.0.0",
+    "multer": ">=2.0.1",
     "nodemailer": "^6.10.0",
     "nodemailer-express-handlebars": "^6.1.2"
   },
