--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -74,6 +74,8 @@ services:
 
   redis:
     image: redis:8.0-rc1-alpine
+    ports:
+      - "6379:6379"
     volumes:
       - redis_data:/data
     networks:
