--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.8.2",
+    "axios": ">=1.12.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cron": "^4.1.0",
@@ -22,8 +22,8 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
-    "multer": ">=2.0.1",
-    "nodemailer": "^6.10.0",
+    "multer": ">=2.0.2",
+    "nodemailer": ">=7.0.7",
     "nodemailer-express-handlebars": "^6.1.2"
   },
   "devDependencies": {
